# regress-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
doc/: API_REFERENCE.md
examples/: aid.rs  alm.rs  binomial.rs  bls.rs  collinearity_intervals.rs  elastic_net.rs  lm_dynamic.rs  lowess.rs  negative_binomial.rs  ols.rs  poisson.rs  ridge.rs  rls.rs  tweedie.rs  wls.rs
src/: lib.rs
src/core/: binomial.rs  family.rs  link.rs  mod.rs  na_action.rs  negative_binomial.rs  options.rs  poisson.rs  prediction.rs  result.rs
src/diagnostics/: glm_residuals.rs  influence.rs  leverage.rs  mod.rs  residuals.rs  vif.rs
src/distributions/: mod.rs
src/inference/: coefficient.rs  mod.rs  prediction.rs
src/solvers/: aid.rs  alm.rs  binomial.rs  bls.rs  elastic_net.rs  lm_dynamic.rs  lowess.rs  mod.rs  negative_binomial.rs  ols.rs  pls.rs  poisson.rs  ridge.rs  rls.rs  traits.rs  tweedie.rs  wls.rs
src/utils/: matrix.rs  mod.rs
tests/: README.md  alm_loss_tests.rs  alm_tests.rs  diagnostics_tests.rs  elastic_net_tests.rs  ols_tests.rs  prediction_interval_tests.rs  r_validation_alm.rs  r_validation_alm_extended.rs  r_validation_glm.rs  r_validation_intervals.rs  r_validation_regression.rs  ridge_tests.rs  rls_tests.rs  validation_tests.rs  wls_tests.rs
tests/common/: mod.rs
tests/r_scripts/: generate_alm_loss_validation.R  generate_alm_validation.R  generate_glm_validation.R  generate_regression_validation.R
validation/: VALIDATION.md  generate_validation_data.R  validation_output.txt
