[package]
name = "anofox-regression"
version = "0.3.0"
edition = "2021"
description = "A robust statistics library for regression analysis"
license = "MIT"
authors = ["Simon M"]
repository = "https://github.com/sipemu/anofox-regression"
readme = "README.md"
keywords = ["statistics", "regression", "linear-regression", "inference"]
categories = ["science", "algorithms"]
documentation = "https://docs.rs/anofox-regression"

[dependencies]
faer = "0.23"
statrs = "0.18"
thiserror = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
approx = "0.5"
